--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="section-heading-upper">Arts Admin</span>
             <span class="section-heading-lower">Done Right</span>
           </h2>
-          <p class="mb-3">We believe you shouldn't have to wrangle a large set of apps that aren't designed with you in mind. With Kuchka you can focus on what matters, The Arts!
+          <p class="mb-3">We believe arts administration should be simple, streamlined, and affordable. With Kuchka you can focus on what matters, The Arts!
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
@@ -85,7 +85,7 @@
               <span class="section-heading-upper">Our Promise</span>
               <span class="section-heading-lower">To You</span>
             </h2>
-            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+            <p class="mb-0">First and foremost we are musicians. We are dedicated to keeping the arts community vibrant and thriving. With that in mind we will do everything to give you the best experience possible.</p>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 small">Copyright &copy; Kuchka Organization 2020</p>
     </div>
   </footer>
 
