--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Kuchka - Contact Us</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,8 +25,8 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-      <span class="site-heading-lower">Business Casual</span>
+      <span class="site-heading-lower">Kuchka</span>
+      <span class="site-heading-upper text-primary mb-3">A Better Way To Do Arts Admin</span>
     </h1>
 
     <!-- Navigation -->
@@ -117,8 +117,8 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
+                  <span class="section-heading-upper">The Right Way To Do Arts Admin</span>
+                  <span class="section-heading-lower">Who Are We?</span>
                 </h2>
                 <p>We are a pair of musicians who specialize in arts administration, and technology. We would love to hear from you with any suggestions you have!</p>
               </div>
