--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/kuchka.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">(In Progress) This is our baby. We are currently working around the clock to bring you a comprehensive, easy to use, and intelligently designed full-service crm platform that works just as hard as you do. Integrating data science and social media analytics to help your organization continue to grow and prosper well into the 21st century.</p>
