--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Kuchka Organization 2020</p>
       </div>
     </footer>
 
