--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p class="mb-3">We believe arts administration should be simple, streamlined, and affordable. With Kuchka you can focus on what matters, The Arts!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+            <a class="btn btn-primary btn-xl" href="http://127.0.0.1:8000/index/">Visit Us Today!</a>
           </div>
         </div>
       </div>
